p5 now adds it's canvas inside the wrap div to prevent scrolling in iOS on orientation change!

--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ body {
     height: 100%; /*Prevent weird autoscroll upon device orientation change on iOS*/
 }
 
-.wrap {
+#wrap {
     height: 100%; /*Prevent weird autoscroll upon device orientation change on iOS*/
     overflow: hidden; /*Prevent weird autoscroll upon device orientation change on iOS*/
 }
@@ -45,9 +45,9 @@ body {
 
 
 .arrowShape {
-    fill: #ffffff;
+    fill: #eeeeee;
     fill-opacity: 0.8;
-    stroke: #888888;
+    stroke: none;
     stroke-width: 1;
     cursor: default;
     -webkit-transition: fill 0.75s;
@@ -103,7 +103,7 @@ body {
 }
 
 @keyframes arrowpulse {
-    from {fill: #ffffff;}
+    from {fill: #eeeeee;}
     to {fill: #888888;}
 }
 
@@ -116,22 +116,13 @@ body {
     }
 }
 
-@media screen and (max-width: 979px) and (max-height: 979px) {
+@media screen and (max-width: 979px), (max-height: 979px) {
     body {
         font-size: 12pt;       
     }
-}
-
-@media screen and (max-width: 600px), (max-height: 600px) {
-    body {
-        font-size: 8pt;       
-    }
-
     .arrow {
-        top: 40%;
         margin: 0px;           
-    }
-
+    }      
     .right {
         -webkit-transform: translate(0, -50%) scale(0.6);
         -moz-transform: translate(0, -50%) scale(0.6);    
@@ -139,7 +130,6 @@ body {
         -o-transform: translate(0, -50%) scale(0.6);
         transform: translate(0, -50%) scale(0.6);
     }
-
     .left {
         -webkit-transform: translate(0, -50%) rotate(180deg) scale(0.6);
         -moz-transform: translate(0, -50%) rotate(180deg) scale(0.6);    
@@ -147,6 +137,15 @@ body {
         -o-transform: translate(0, -50%) rotate(180deg) scale(0.6);
         transform: translate(0, -50%) rotate(180deg) scale(0.6);
     }
+    .arrowShape {
+        stroke-width: 2;        
+    }
+}    
+
+@media screen and (max-width: 600px), (max-height: 600px) {
+    body {
+        font-size: 8pt;       
+    }       
 }
 
 a {
@@ -204,7 +203,7 @@ span {
 .credits {
     font-weight: 300;    
     font-size: 70%;
-    color: #BBBBBB;
+    color: #AAAAAA;
 }
 
 .flex-container {
